--- a/styel.css
+++ b/styel.css
@@ -14,19 +14,23 @@
   font-style: normal;
 }
 
+body{
+      max-width: 1320px;
+      align-items: center;
+}
+
 .banner{
     background-image: url('images/Banner\ Image.png');
     background-repeat: no-repeat;
     height: 600px;
     text-align: center;
     align-items: center;
-    max-width: 1320px;
 }
 
 .banner-container{
     padding: 177px 344px;
      background-size: cover;
-     background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0));
+     background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.04));
 }
 .banner-title{
     font-size: 32px;
@@ -39,4 +43,42 @@
     color: #FFFFFF;
     font-weight: 900;
     margin-top: 16px;
+}
+
+/* banner section end */
+
+/* discount section start */
+
+.discount-section{
+
+}
+
+.discount{
+  color: #FF0000;
+  font-weight: bold;
+  font-size: 88px;
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 48px;
+}
+
+.discount-description{
+  font-size: 24px;
+  font-weight: 300;
+  color: #FF0000;
+  text-align: center;
+}
+
+.discount-categories{
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  color: #070211;
+  margin-top: 16px;
+  margin-bottom: 48px;
+}
+
+.new-year-img{
+  padding: 48px 259px 120px 258px;
+  width: 809px;
 }
